Updated README with action potential plots, reduced action potential data file size by rounding, fixed vignette png error by placing png in vignettes/

--- a/README.Rmd
+++ b/README.Rmd
@@ -97,7 +97,7 @@ Plot a representative recording trace showing spontaneous currents from a raw Ax
 
 ```{r example-spontaneous-current-trace-plot, fig.alt = "A representative trace from a raw abf recording, showing a series of noisy, negative-going peaks. Each peak represents a spontaneous current"}
 plot_spontaneous_current_trace(
-  file = sample_abf_file,
+  data = sample_abf_file,
   plot_colour = "#6600cc",
   include_scale_bar = "yes",
   plot_episode = "epi1",
@@ -105,6 +105,43 @@ plot_spontaneous_current_trace(
   scale_bar_y_length = 10,
   plot_x_min = 1,
   plot_x_max = 3
+)
+```
+
+
+Plot action potential traces...
+
+```{r ap-trace-viridis, fig.alt = "A plot of current clamp steps where each sweep is coloured a different colour"}
+plot_AP_trace(
+  data = sample_ap_abf_baseline,
+  sweeps = as.character(unique(sample_ap_abf_baseline$episode)),
+  colour_scale_option = "viridis",
+  plot_category = 2,
+  plot_treatment = "Control",
+  direction = -1,
+  option = "plasma",
+  begin = 0,
+  end = 0.8
+)
+```
+
+
+
+
+...and a summary of differences in action potential frequency across treatments.
+
+```{r ap-frequencies-one-treatment, fig.alt = "A plot of Action Potential Frequency in Hz versus current injection on the x-axis. The data are coloured gray for baseline data and purple for insulin data. The plot is showing that action potential frequency was lower after adding insulin."}
+plot_AP_frequencies_single_treatment(
+  data = sample_AP_count_data,
+  plot_treatment = "Control",
+  plot_category = 2,
+  baseline_label = "Baseline",
+  hormone_added = "Insulin",
+  treatment_colour_theme = sample_treatment_names_and_colours,
+  large_axis_text = "no",
+  test_type = "wilcox.test",
+  theme_options = sample_theme_options,
+  save_plot_png = "no"
 )
 ```
 
